--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/10_repositories.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/10_repositories.mdx
@@ -6,72 +6,72 @@ nfdi4chem-tags: [data_organisation, data_storage, repositories]
 slug: "/repositories"
 ---
 
-## Introduction
+## Einleitung
 
-Repositories are locations where digital objects are stored and made available to the public or data users. They can be regarded as the core of data sharing as they provide platforms to acquire, store, archive, publish, curate, preserve, and access data.
+Repositorien sind Orte, an denen digitale Objekte gespeichert und der Öffentlichkeit oder Datennutzern zur Verfügung gestellt werden. Sie können als das Herzstück der gemeinsamen Datennutzung angesehen werden, da sie Plattformen für den Erwerb, die Speicherung, die Archivierung, die Veröffentlichung, die Kuratierung, die Bewahrung und den Zugang zu Daten bieten.
 
-Repositories can be classified differently according to:
+Repositorien können unterschiedlich klassifiziert werden nach:
 
-- the type of objects to be stored (e.g. publications or research data),
-- the domain of the data contained (institutional, subject-specific or generic),
-- the storage period of the data (e.g. at least 10 years) or
-- the data access and -reuse policy
+- der Art der zu speichernden Objekte (z. B. Publikationen oder Forschungsdaten),
+- dem Bereich der enthaltenen Daten (institutionell, fachspezifisch oder generisch)
+- der Speicherdauer der Daten (z.B. mindestens 10 Jahre) oder
+- die Datenzugangs- und -wiederverwendungspolitik
 
-Repositories can be an institutional publication server, a subject-specific Open Access (OA) repository, a subject-specific data repository or a long-term archive for data and publications.
+Repositorien können ein institutioneller Publikationsserver, ein fachspezifisches Open-Access-Repositorium, ein fachspezifisches Datenrepositorium oder ein Langzeitarchiv für Daten und Publikationen sein.
 
-## How do repositories work?
+## Wie funktionieren Repositorien?
 
-Curators proof-check data before **ingestion** in the repository, with regard to their content or quality, and, sometimes, also regarding their legal aspects (copyright, data protection) and ensure that the data are directly available to data-users.
+Kuratoren prüfen die Daten vor der **Einstellung** in das Repositorium hinsichtlich ihres Inhalts oder ihrer Qualität und manchmal auch hinsichtlich ihrer rechtlichen Aspekte (Urheberrecht, Datenschutz) und stellen sicher, dass die Daten den Datennutzern direkt zur Verfügung stehen.
 
-A repository is constituted by repository software and a database. Data providers can transfer the data to the repository typically via a web-based user interface, or the repository operators collect (**harvest**) the data automatically from other platforms via appropriate protocols and interfaces.
+Ein Repositorium besteht aus einer Repository-Software und einer Datenbank. Datenanbieter können die Daten in der Regel über eine webbasierte Benutzeroberfläche an das Repositorium übermitteln, oder die Betreiber des Repositoriums sammeln (**ernten**) die Daten automatisch von anderen Plattformen über geeignete Protokolle und Schnittstellen.
 
-In order to allow data re-use by third parties, [metadata](/docs/metadata) are required beside the actual data. They describe the content of the research data and provide information about its creation, the software or methods used and legal aspects. Metadata can be either added manually or provided through other applications. The metadata should also include terms of use in the form of licences that regulate access to the data (registration, embargo, etc.).
+Um eine Weiterverwendung der Daten durch Dritte zu ermöglichen, werden neben den eigentlichen Daten auch [Metadaten](/docs/metadata) benötigt. Sie beschreiben den Inhalt der Forschungsdaten und geben Auskunft über ihre Entstehung, die verwendete Software oder Methoden sowie rechtliche Aspekte. Metadaten können entweder manuell hinzugefügt oder durch andere Anwendungen bereitgestellt werden. Die Metadaten sollten auch Nutzungsbedingungen in Form von Lizenzen enthalten, die den Zugang zu den Daten regeln (Registrierung, Embargo, usw.).
 
-Usually repositories offer a search function with which users can find, view and download data. In order to ensure that data are permanently referenced and cited, repositories assign unique [persistent identifiers](/docs/pid) (PIDs). 
+In der Regel bieten Repositorien eine Suchfunktion, mit der Nutzer Daten finden, ansehen und herunterladen können. Um sicherzustellen, dass die Daten dauerhaft referenziert und zitiert werden, vergeben Repositorien eindeutige [persistent identifiers](/docs/pid) (PIDs). 
 
-## Finding the right repository
+## Das richtige Repositorium finden
 
-Because of the multitudes of data repositories existing, users could better orient themselves using a research data repository registry (e.g. https://fairsharing.org/ or https://www.re3data.org/). Repository registry services are an essential component of the [FAIR](/docs/fair) (**F**indable **A**ccessible **I**nteroperable **R**eusable)-strategy as they help researchers to navigate through thousands of data repository services to find the most suitable one to store and provide access to their research outputs as well as to enable them to search for and repurpose FAIR data created by others. DataCite's Repository Finder finds repositories that meet the criteria recommended by the Enabling FAIR Data Project. ROAR and OPENDOAR are directories that list Open Access repositories from all over the world.
+Aufgrund der Vielzahl der vorhandenen Repositorien können sich die Nutzer mit Hilfe eines Registers für Forschungsdaten-Repositorien (z. B. https://fairsharing.org/ oder https://www.re3data.org/) besser orientieren. Registerdienste für Repositorien sind ein wesentlicher Bestandteil der [FAIR](/docs/fair) (**F**indable **A**ccessible **I**nteroperable **R**eusable)-Strategie, da sie Forschern dabei helfen, sich in Tausenden von Repositorien zurechtzufinden, um das am besten geeignete Repositorium für die Speicherung und den Zugang zu ihren Forschungsergebnissen zu finden, und sie in die Lage versetzen, nach FAIR-Daten, die von anderen erstellt wurden, zu suchen und sie weiterzuverwenden. Der Repositorium-Finder von DataCite findet Repositorien, die die vom Enabling FAIR Data Project empfohlenen Kriterien erfüllen. ROAR und OPENDOAR sind Verzeichnisse, die Open-Access-Repositorien aus der ganzen Welt auflisten.
 
-Repositories can also be certified (e.g. CoreTrustSeal). Such certification ensures data users, among other things, that data will be usable, citable and preserved in the long run. 
+Repositorien können auch zertifiziert werden (z. B. CoreTrustSeal). Eine solche Zertifizierung garantiert den Datennutzern unter anderem, dass die Daten nutzbar, zitierfähig und langfristig erhalten sind. 
 
-Nowadays more and more peer review journals mandate authors to deposit their data into repositories (e.g. figshare) prior to manuscript submission. If authors do not comply with these rules, the review process is not initiated.
+Heutzutage verlangen immer mehr Peer-Review-Zeitschriften von den Autoren, dass sie ihre Daten vor der Einreichung des Manuskripts in Repositorien (z. B. figshare) hinterlegen. Wenn Autoren diese Regeln nicht einhalten, wird der Begutachtungsprozess nicht eingeleitet.
 
-## Repositories for Chemistry
+## Repositorien für die Chemie
 
-In the field of synthetic and analytical chemistry, the repository [Chemotion](https://www.chemotion-repository.net/welcome) was developed aiming to fill the existing gap for the preservation and publication of experimental work. Chemotion supports scientists in depositing and sharing data in a structured and transparent way. It is free of charge and its software code is available on GitHub. It uses available standardised identifiers such as the reaction **InChI** (RInChI and RInChIKey). In addition, it is possible to transfer data from an Open Source [Electronic Laboratory Notebook](/docs/eln) (ELN) into the workspace area of the repository. The main advantages of the Chemotion repository are:
+Im Bereich der synthetischen und analytischen Chemie wurde das Repositorium [Chemotion] (https://www.chemotion-repository.net/welcome) entwickelt, um die bestehende Lücke bei der Aufbewahrung und Veröffentlichung von experimentellen Arbeiten zu schließen. Chemotion unterstützt Wissenschaftler bei der Hinterlegung und gemeinsamen Nutzung von Daten auf strukturierte und transparente Weise. Es ist kostenlos und sein Softwarecode ist auf GitHub verfügbar. Es verwendet verfügbare standardisierte Identifikatoren wie den Reaktionscode **InChI** (RInChI und RInChIKey). Darüber hinaus ist es möglich, Daten aus einem Open Source [Elektronisches Laborjournal](/docs/eln) (ELN) in den Arbeitsbereich des Repositoriums zu übertragen. Die Hauptvorteile des Chemotion Repositoriums sind:
 
-- comprehensive functionality for the collection, preparation and reuse of data using discipline specific methods and data processing tools
-- existence of automated procedures to ease data curation
-- provision of functions for a seamless publication and citation of deposited data
-- support of [Digital Object Identifier](/docs/pid) (DOI) generation, the comparison of the submissions with PubChem instances, and workflows for peer reviewing of the submissions including embargo settings
+- umfassende Funktionalität für die Sammlung, Aufbereitung und Wiederverwendung von Daten unter Verwendung disziplinspezifischer Methoden und Datenverarbeitungswerkzeuge
+- Vorhandensein von automatisierten Verfahren zur Erleichterung der Datenkuratierung
+- Bereitstellung von Funktionen für eine nahtlose Veröffentlichung und Zitierung der hinterlegten Daten
+- Unterstützung der [Digital Object Identifier](/docs/pid) (DOI)-Generierung, des Abgleichs der Einreichungen mit PubChem-Instanzen und der Arbeitsabläufe für das Peer-Reviewing der Einreichungen einschließlich Embargo-Einstellungen
 
-### Core repositories
+### Kern-Repositorien
 
-- [Chemotion Repository](https://www.chemotion-repository.net/welcome) Repository for molecules, reactions and research data 
-- [MassBank EU](https://massbank.eu/MassBank/) Ecosystem of databases and tools for mass spectrometry reference spectra (open source)
-- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/) Offers a free and reliable home for all chemical research data that do not fulfill the specifications of other repositories
-- [SUPRABANK](https://suprabank.org/) Curated open resource for intermolecular interactions
-- [STRENDA DB](https://www.beilstein-strenda-db.org/) Standards for reporting enzymology data
+- [Chemotion Repositorium](https://www.chemotion-repository.net/welcome) Repositorium für Moleküle, Reaktionen und Forschungsdaten 
+- [MassBank EU](https://massbank.eu/MassBank/) Ökosystem von Datenbanken und Tools für Massenspektrometrie-Referenzspektren (Open Source)
+- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/) Bietet ein kostenloses und zuverlässiges Zuhause für alle chemischen Forschungsdaten, die nicht den Spezifikationen anderer Repositorien entsprechen
+- [SUPRABANK](https://suprabank.org/) Kuratierte offene Ressource für intermolekulare Wechselwirkungen
+- [STRENDA DB](https://www.beilstein-strenda-db.org/) Standards für die Berichterstattung über enzymologische Daten
 
-### Associated repositories and databases 
+### Zugehörige Repositorien und Datenbanken 
 
 - [CSD/CCDC](https://www.ccdc.cam.ac.uk/) Cambridge Structural Database 
-- [ICSD](https://icsd.fiz-karlsruhe.de/index.xhtml;jsessionid=0C3EFEDF8A88E145B9C25B0935E0E0EF) Inorganic Crystal Structure Database
+- [ICSD](https://icsd.fiz-karlsruhe.de/index.xhtml;jsessionid=0C3EFEDF8A88E145B9C25B0935E0E0EF) Datenbank für anorganische Kristallstrukturen
 
-### Other relevant repositories and databases
+### Andere relevante Repositorien und Datenbanken
 
-- [NOMAD](https://nomad-lab.eu/) FAIR sharing and use of materials science data 
-- [ioChem-BD](https://www.iochem-bd.org/) Repository for computational chemistry results 
-- [RADAR](https://www.radar-service.eu/radar/en/home) Repository for multi-disciplinary research data 
-- [Zenodo](https://zenodo.org/) General-purpose open-access repository developed under the European OpenAIRE program and operated by CERN
-- [EUDAT CDI](https://www.eudat.eu/) Pan-European network consisting of more than 25 research organisations, data and computing centers
-- [ChemSpider](https://www.chemspider.com/) Free chemical structure database providing fast text and structure search access to over 100 million structures from hundreds of data sources
-- [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry database at the National Institutes of Health (NIH)
+- [NOMAD](https://nomad-lab.eu/) FAIRer Austausch und Nutzung von materialwissenschaftlichen Daten 
+- [ioChem-BD](https://www.iochem-bd.org/) Repositorium für Ergebnisse der rechnergestützten Chemie 
+- [RADAR](https://www.radar-service.eu/radar/en/home) Repositorium für multidisziplinäre Forschungsdaten 
+- [Zenodo](https://zenodo.org/) Allgemein zugängliches Repositorium, das im Rahmen des europäischen Programms OpenAIRE entwickelt und vom CERN betrieben wird
+- [EUDAT CDI](https://www.eudat.eu/) Pan-European Netzwerk bestehend aus mehr als 25 Forschungsorganisationen, Daten- und Rechenzentren
+- [ChemSpider](https://www.chemspider.com/) Kostenlose Datenbank für chemische Strukturen, die schnellen Zugang zu über 100 Millionen Strukturen aus Hunderten von Datenquellen bietet
+- [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry Datenbank bei den National Institutes of Health (NIH)
 
-## Sources and further information
+## Quellen und weitere Informationen
 - https://www.rd-alliance.org/groups/repository-platforms-research-data.html
 - https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
-- The Repository Chemotion: infrastructure for sustainable research in chemistry<br/>https://doi.org/10.1002/anie.202007702
+- Das Repositorium Chemotion: infrastructure for sustainable research in chemistry<br/>https://doi.org/10.1002/anie.202007702
 - Chemotion ELN: an open source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
-- German: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
+- Deutsch: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
