--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/50_data_articles.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/50_data_articles.mdx
@@ -2,26 +2,26 @@
 title: "Data Articles"
 slug: "/data_articles"
 ---
-# Data Articles
+# Daten Artikel
 
-:::info Applies to:
-This article applies to researchers with a dataset that warrants to publish an accompanying scientific data article in a scientific journal.
+:::info Gilt für:
+Dieser Artikel gilt für Forscher mit einem Datensatz, der die Veröffentlichung eines begleitenden wissenschaftlichen Datenartikels in einer wissenschaftlichen Fachzeitschrift rechtfertigt.
 :::
 
 ## Motivation
-Many research institutions and also most funding institutions provide RDM guidelines within their recommendations on [data management plans](/docs/dmp/) and also recommend and increasingly require to set-up such plans in order to ensure that the data are archived in a FAIR way. Moreover, many funding institutions [encourage or even require](https://forschungsdaten.info/fr/praxis-kompakt/english-pages/funder-guidelines/) the publication of FAIR data.
+Viele Forschungseinrichtungen und auch die meisten Förderinstitutionen geben in ihren Empfehlungen zu [Datenmanagementplänen](/docs/dmp/) RDM-Richtlinien vor und empfehlen und fordern zunehmend die Erstellung solcher Pläne, um sicherzustellen, dass die Daten auf FAIRe Weise archiviert werden. Darüber hinaus [fördern oder fordern](https://forschungsdaten.info/fr/praxis-kompakt/english-pages/funder-guidelines/) viele Fördereinrichtungen die Veröffentlichung von FAIR-Daten.
 
-Research data can be published in [research data repositories](/docs/repositories/) usually without peer-review, which makes the dataset(s) citable. Nevertheless, the value of research data itself is increasing, and may warrant a separate peer-reviewed publication in a scientific journal in its own right. 
+Forschungsdaten können in [Forschungsdaten-Repositorien](/docs/repositories/) in der Regel ohne Peer-Review veröffentlicht werden, wodurch die Datensätze zitierfähig werden. Der Wert der Forschungsdaten selbst nimmt jedoch zu und kann eine separate, von Fachkollegen begutachtete Veröffentlichung in einer wissenschaftlichen Zeitschrift rechtfertigen. 
 
-## How to start
+## Wie man anfängt
 
-Several journals have added some form of data articles to their article types. Moreover, entire journals dedicated to publication of data articles have been created such as [Scientific Data](https://www.nature.com/sdata/), [Data](https://www.mdpi.com/journal/data) or [Research Elements journals](https://www.elsevier.com/authors/tools-and-resources/research-elements-journals).  
+Mehrere Zeitschriften haben eine Form von Datenartikeln zu ihren Artikelarten hinzugefügt. Darüber hinaus wurden ganze Zeitschriften gegründet, die sich der Veröffentlichung von Datenartikeln widmen, wie z. B. [Scientific Data](https://www.nature.com/sdata/), [Data](https://www.mdpi.com/journal/data) oder [Research Elements journals](https://www.elsevier.com/authors/tools-and-resources/research-elements-journals).  
 
-The first step is to determine whether the data set(s) meet the criteria to pass the review process of the journals. In case the data shall be published in conjunction with an original research article, it has to be determined whether the editorial policy is compatible with a separate data publication. Here, the author guidelines or a brief email to the editorial contact can provide an answer. 
+Der erste Schritt besteht darin, festzustellen, ob der Datensatz/die Datensätze die Kriterien erfüllen, um das Prüfverfahren der Zeitschriften zu bestehen. Falls die Daten in Verbindung mit einem Original-Forschungsartikel veröffentlicht werden sollen, muss geklärt werden, ob die redaktionelle Politik mit einer separaten Datenveröffentlichung vereinbar ist. Hier können die Autorenrichtlinien oder eine kurze E-Mail an die Kontaktperson der Redaktion eine Antwort geben. 
 
-Data articles usually consist of a manuscript describing the scientific background and a detailed description of materials and methods used, and links to one or more FAIR datasets published in a [research data repositories](/docs/repositories/) via their [PID](/docs/PID/)s. The applied quality control measures can be emphasised in the article, and potential reuse could be explained. 
+Datenartikel bestehen in der Regel aus einem Manuskript, das den wissenschaftlichen Hintergrund und eine detaillierte Beschreibung der verwendeten Materialien und Methoden enthält, sowie Links zu einem oder mehreren FAIR-Datensätzen, die in einem [Forschungsdaten-Repositorium](/docs/repositories/) über ihre [PID](/docs/PID/)s veröffentlicht sind. Die angewandten Maßnahmen zur Qualitätskontrolle können in dem Artikel hervorgehoben und die mögliche Wiederverwendung erläutert werden. 
 
-Together, the deposited FAIR dataset and the citable, peer-reviewed data manuscript give the data the credits it deserves. 
-## Further information
+Der hinterlegte FAIR-Datensatz und das zitierfähige, von Fachleuten begutachtete Datenmanuskript verleihen den Daten die Anerkennung, die sie verdienen. 
+## Weitere Informationen
 
-- [List of data journals on Forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Journals)
+- Liste der Datenjournale auf Forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Journals)
