--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/60_data_availability_statement.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/60_data_availability_statement.mdx
@@ -2,52 +2,49 @@
 title: "Data Availability Statement"
 slug: "/data_availability_statement"
 ---
-# Data Availability Statement
+# Datenverfügbarkeitserklärung
 
-## Introduction
+## Einleitung
 
-The data availability statement is part of the back matter of a manuscript. The back matter usually also contains information on conflicts of interest, author information, acknowledgements and the references. 
+Die Erklärung zur Datenverfügbarkeit ist Teil des hinteren Teils eines Manuskripts. Sie enthält in der Regel auch Informationen zu Interessenkonflikten, Autoreninformationen, Danksagungen und Referenzen. 
 
-The data availability statement enables [linking of the manuscript](/docs/data_publication) to the corresponding FAIR dataset in research data [repositories](/docs/repositories) via  [DOIs](/docs/pid), alternatively using the repository-specific identifiers or accession numbers.  
+Die Datenverfügbarkeitserklärung ermöglicht die [Verlinkung des Manuskripts](/docs/data_publication) mit dem entsprechenden FAIR-Datensatz in Forschungsdaten-[Repositorien](/docs/repositories) über [DOIs](/docs/pid), alternativ unter Verwendung der repositoriumsspezifischen Identifikatoren oder Akzessionsnummern.  
 
 ## Templates for Data Availability Statements
 
-<b>Data in a publicly accessible repository with DOI</b>
+<b>Daten in einem öffentlich zugänglichen Repositorium mit DOI</b>
 
-The data generated and analysed during this study are openly available in [repository name] at [DOI as URL].
+Die im Rahmen dieser Studie generierten und analysierten Daten sind in [Repositoriumname] unter [DOI als URL] offen verfügbar.
+<b>Daten werden in einem öffentlich zugänglichen Repositorium mit DOI nach einem Embargo ab dem Datum der Veröffentlichung verfügbar sein</b>
 
-<b>Data will be available in a public repository with DOI following an embargo from the date of publication</b>
+Die im Rahmen dieser Studie generierten und analysierten Daten werden nach einem Embargo ab dem Datum der Veröffentlichung in [Name des Repositorien] unter [DOI als URL] offen verfügbar sein
 
-The data generated and analysed during this study will be openly available in [repository name] at [DOI as URL] following an embargo from the date of publication.
+<b>Daten aus öffentlich zugänglichen Quellen</b>
 
-<b>Data derived from public domain resources</b>
+Die Daten, die in dieser Studie verwendet wurden, sind in [Name des Repositoriums] unter [DOI als URL] frei zugänglich. Die Daten wurden aus öffentlich zugänglichen Quellen [Liste der Ressourcen] abgeleitet.
+<b>Daten sind Eigentum eines Dritten und die Verfügbarkeit ist eingeschränkt</b>
 
-The data used for/in this study are openly available in [repository name] at [DOI as URL]. The data were derived from sources available in the public domain [list of resources]. 
+Die in dieser Studie analysierten Daten wurden von [Drittpartei] unter Lizenz/mit Genehmigung zur Verfügung gestellt und sind nicht öffentlich zugänglich. Die Daten sind auf Anfrage an [Dritte, einschließlich Kontaktinformationen] verfügbar.
+<b>Daten sind auf Anfrage bei einem Datenzugangsausschuss aufgrund von Einschränkungen durch ethische Gründe und rechtliche oder datenschutzrechtliche Bestimmungen verfügbar</b>
 
-<b>Dataset owned by a third party and restrictions apply to availability</b>
+Die in dieser Studie erzeugten und analysierten Daten sind aus [Gründen, einschließlich Erklärung] nicht öffentlich zugänglich. Die Daten sind in [Repositorium] auf Anfrage bei einem Datenzugriffsausschuss [Link zu Zugangsinformationen] verfügbar.
 
-The data analysed in this study were provided by [third party] under licence/by permission and are not publicly available. Data are available upon request to [third party, including contact information].
+<Die gemeinsame Nutzung von Daten ist nicht möglich, da keine neuen Daten generiert werden.</b>
 
-<b>Data available on request to a Data Access Committee due to restrictions by ethical reasons and legal or privacy regulations</b>
-
-The data generated and analysed in this study are not openly available due to [reasons, including explanation]. The data are available in [repository] on request to a Data Access Committee [link to access information].
-
-<b>Data sharing is not applicable, as no new data is generated.</b>
-
-Data sharing is not applicable, as no new data was generated or analysed in this study.
+Die gemeinsame Nutzung von Daten ist nicht anwendbar, da in dieser Studie keine neuen Daten generiert oder analysiert wurden.
 
 :::danger Notice:                                
-Please note that data availability statements such as *'data available on request from the authors'* and *'authors have elected not to share data'* are unFAIR, as the data is neither findable nor accessible. Furthermore, statements such as *'data available in supplementary material of the article'* are unFAIR, if data is kept in supplementary PDFs, as this data is not interoperable and, hence, difficult to be reused.
+Bitte beachten Sie, dass Angaben zur Datenverfügbarkeit wie *'Daten sind auf Anfrage bei den Autoren verfügbar'* und *'die Autoren haben sich entschieden, die Daten nicht weiterzugeben'* unFAIR sind, da die Daten weder auffindbar noch zugänglich sind. Außerdem sind Angaben wie *'data available in supplementary material of the article'* unFAIR, wenn die Daten in ergänzenden PDFs aufbewahrt werden, da diese Daten nicht interoperabel sind und daher schwer wiederverwendet werden können.
 :::
 
-## Sources and further information
+## Quellen und weitere Informationen
 
-- [Data Sharing in PLOS One: An analysis of Data Availability Statements](https://doi.org/10.1371/journal.pone.0194768)
-- [The Impact on Authors and Editors of Introducing Data Availability Statements at Nature Journals](https://doi.org/10.2218/ijdc.v13i1.614)
-- [Joint Declaration of Data Citation Principles](https://doi.org/10.25490/a97f-egyk)
-- [Data Access Committee - European Genome-Phenome Archive ](https://ega-archive.org/submission/data_access_committee)
+- Datenfreigabe in PLOS One: Eine Analyse der Datenverfügbarkeitserklärungen](https://doi.org/10.1371/journal.pone.0194768)
+- Die Auswirkungen der Einführung von Datenverfügbarkeitserklärungen bei Nature Journals auf Autoren und Herausgeber](https://doi.org/10.2218/ijdc.v13i1.614)
+- Gemeinsame Erklärung über die Grundsätze der Datenzitation](https://doi.org/10.25490/a97f-egyk)
+- Datenzugangsausschuss - Europäisches Genom-Phänomen-Archiv](https://ega-archive.org/submission/data_access_committee)
 
-*This article is licensed under a Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.*
+*Dieser Artikel steht unter einer Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.
 
 ![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
