--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -22,13 +22,13 @@ Data publication is essential in ensuring findings are transparent and reproduci
 
 ## Benefits of data publication
 
-There are direct benefits for researchers who publish their data. Data publications increase your career recognition, enable new collaborations and provided a citation advantage compared to articles without an associated and linked dataset in a research data repository.
+There are direct benefits for researchers who publish their data. Data publications increase your career recognition, enable new collaborations, and provide a citation advantage compared to articles without an associated and linked dataset in a research data repository.
 
 <img align="center" src={useBaseUrl('/img/data_pub/data_publication_brian_hole_CC_BY_40.png')} alt="Data Publication Brian Hole CC BY 4.0" width="80%" />
 
 (Source: Brian Hole, CC BY 4.0, [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
 
-Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also the public sector will profit by enhanced public trust in science, as data publication allows for validation of research results. Nonetheless, there is an economic benefit of data publication if results can be reused by the private sector.
+Additionally, the research community benefits here as, for example, new research is made possible and efficiency in research increases. Also the public sector will profit by enhanced public trust in science, as data publication allows for the validation of research results. Nonetheless, there is an economic benefit of data publication if results can be reused by the private sector.
 
 ## How to start
 
@@ -43,12 +43,12 @@ Field-specific repositories should be the first choice as these repositories enh
 
 [Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion_eln/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via [Chemotion Repository](https://www.chemotion-repository.net/).
 
-Further information on repositories including a list of recommended chemistry-friendly repositories is provided in our articles on [repositories](/docs/repositories) and guide on [how to choose the right repository](/docs/choose_repository).
+Further information on repositories, including a list of recommended chemistry-friendly repositories, is provided in our article on [repositories](/docs/repositories) and guide on [how to choose the right repository](/docs/choose_repository).
 
-A [data vvailability statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets and scientific publications should be interlinked using [persistent identifiers](/docs/pid/).
+A [data availability statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets and scientific publications should be interlinked using [persistent identifiers](/docs/pid/).
 
 :::danger Notice:  
-Still confused on how data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at Lead by Example [Datasets](/docs/datasets) for inspiration!
+Still confused on what data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at Lead by Example [Datasets](/docs/datasets) for inspiration!
 :::
 
 ## Sources and further information
