--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/51_lbe/00_lbe-intro.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/51_lbe/00_lbe-intro.mdx
@@ -6,14 +6,14 @@ id: "lbe-intro"
 
 import IntroButton from '@site/src/components/IntroButton.js'
 
-NFDI4Chem has a clear vision of how chemistry research data will be collected, processed, archived, shared and published. The development of standards for metadata, minimum information, analytical data formats as well as publication standards includes sample datasets in a standard-compliant manner.
+NFDI4Chem hat eine klare Vorstellung davon, wie Forschungsdaten der Chemie gesammelt, verarbeitet, archiviert, gemeinsam genutzt und veröffentlicht werden sollen. Die Entwicklung von Standards für Metadaten, Mindestinformationen, analytische Datenformate sowie Publikationsstandards umfasst standardkonforme Musterdatensätze.
 
-Herein we present representative as well as substantially complex real datasets from various subdisciplines of chemistry. These datasets were collected within NFDI4Chem, but also external contributions by early adopters via our [survey form](https://docs.google.com/forms/d/e/1FAIpQLSdd_4oNSM0Q4epJwxNU5zthL_0JroGSYl4ILMLR0G1Xo9YbRw/viewform) are listed, for which we provide support via a consulting service and data stewardship. 
+Wir stellen hier repräsentative sowie wesentlich komplexere Realdatensätze aus verschiedenen Teildisziplinen der Chemie vor. Diese Datensätze wurden innerhalb von NFDI4Chem gesammelt, aber auch externe Beiträge von Early Adopters über unser [Umfrageformular] (https://docs.google.com/forms/d/e/1FAIpQLSdd_4oNSM0Q4epJwxNU5zthL_0JroGSYl4ILMLR0G1Xo9YbRw/viewform) sind aufgeführt, für die wir Unterstützung durch einen Beratungsservice und Data Stewardship anbieten. 
 
-This collection also documents the process of evolving FAIRness of chemistry research data, surfaces practical issues and suggestions for improvements to be fed back to other projects within NFDI4Chem.
+Diese Sammlung dokumentiert auch den Prozess der Entwicklung der FAIRness von Forschungsdaten in der Chemie und zeigt praktische Probleme und Verbesserungsvorschläge auf, die an andere Projekte innerhalb von NFDI4Chem weitergegeben werden.
 
-Take a look at the list for inspiration as to what is already possible today!
+Schauen Sie sich die Liste an, um sich inspirieren zu lassen, was heute schon möglich ist!
 
-Do you want to have your published dataset highlighted here or do you need assistance in the preparation of your dataset for publication? Pledge your dataset to NFDI4Chem! More information can be found [here](https://www.nfdi4chem.de/index.php/2022/02/02/data-pledge-lets-lead-by-example-2/).
+Möchten Sie, dass Ihr veröffentlichter Datensatz hier hervorgehoben wird oder benötigen Sie Unterstützung bei der Vorbereitung Ihres Datensatzes für die Veröffentlichung? Melden Sie Ihren Datensatz bei NFDI4Chem an! Weitere Informationen finden Sie [hier](https://www.nfdi4chem.de/index.php/2022/02/02/data-pledge-lets-lead-by-example-2/).
 
 <IntroButton url={"/docs/datasets"} imgUrl={"/img/nfdi4chem_Lead_by_Example.svg"} text={"Get started"} />
