--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/51_lbe/10_datasets.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/51_lbe/10_datasets.mdx
@@ -7,12 +7,12 @@ slug: "/datasets"
 import Lbe from '@site/src/components/LeadByExample.js';
 
 
-# Lead by Example Datasets
+# Beispielhafte Datensätze
 
 <Lbe />
 
 :::note
 
-*This list will be continuously updated with further publication dataset pairs.*
+*Diese Liste wird laufend mit weiteren Publikationsdatensatzpaaren aktualisiert.
 
 :::
