--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/00_topics_guide.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/00_topics_guide.mdx
@@ -6,24 +6,24 @@ id: "topics_guide"
 
 
 :::info Info:
-The topics and concepts section offers topic-specific articles on very specific subjects in research data management and digitalization in chemistry This section is sub-divided into further categories for easy reference. 
+Die Rubrik Themen und Konzepte bietet themenspezifische Artikel zu ganz bestimmten Themen des Forschungsdatenmanagements und der Digitalisierung in der Chemie. Diese Rubrik ist zum leichteren Nachschlagen in weitere Kategorien untergliedert. 
 :::
 
-For data to be interoperable and reusable, [data formats standards](62_data_formats/00_format_standards.mdx) are of utmost importance. Development here is ongoing and we will continue to add information on formats.
+Damit Daten interoperabel und wiederverwendbar sind, sind [Datenformatstandards](62_data_formats/00_format_standards.mdx) von größter Bedeutung. Die Entwicklung in diesem Bereich ist im Gange, und wir werden weiterhin Informationen über Formate hinzufügen.
 
-In order to ensure that data are permanently referenced and cited, repositories assign unique [persistent identifiers (PIDs)](/docs/pid). By linking the journal publication to the data publication, findability of the data files for re-use is guaranteed.
+Um sicherzustellen, dass die Daten dauerhaft referenziert und zitiert werden, vergeben die Repositorien eindeutige [persistent identifiers (PIDs)](/docs/pid). Durch die Verknüpfung der Zeitschriftenveröffentlichung mit der Datenveröffentlichung wird die Auffindbarkeit der Datendateien für die Wiederverwendung gewährleistet.
 
-Annotating data with machine-readable [metadata](63_data_description_annotation/10_metadata.mdx) plays into nearly all aspects of FAIR and ensures data are understood by machines and humans alike. Here, the core concepts of [ontologies](/docs/ontology) in one's research domain proves helpful.
+Die Kommentierung der Daten mit maschinenlesbaren [Metadaten](63_data_description_annotation/10_metadata.mdx) spielt in nahezu alle Aspekte von FAIR hinein und stellt sicher, dass die Daten von Maschinen und Menschen gleichermaßen verstanden werden. Hierbei erweisen sich die Kernkonzepte von [Ontologien](/docs/ontology) im eigenen Forschungsgebiet als hilfreich.
 
 
 <details>
-  <summary>Click to expand for all the Categories</summary>
+<summary>Klicken Sie, um alle Kategorien zu erweitern</summary>
   
- <h3>Topics & Concepts</h3>
+<h3>Themen & Konzepte</h3>
  
 <a href="/docs/identifiers">Identifiers</a> <br />
 <a href="/docs/format_standards">Data Formats</a> <br />
-<a href="/docs/data_description_annotation">Data Description and Annotation</a> <br />
+<a href="/docs/data_description_annotation">Datenbeschreibung und -anmerkung</a> <br />
 
 
 </details>
