--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/00_identifiers.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/00_identifiers.mdx
@@ -4,16 +4,16 @@ slug: "/identifiers"
 id: "identifiers"
 ---
 
-# Identifiers
+# Bezeichner
 
-Identifiers are typically unique codes aimed to identify something in the material or digital space. For example, a research group may have a fixed naming method for identifying samples within their projects. A further example in chemistry is the [Chemical Abstracts Service (CAS) Registry Number](https://www.cas.org/solutions/cas-custom-services/cas-registry-services), a unique identifier assigned to each chemical substance that is indexed in the [CAS database](https://www.cas.org/support/documentation/cas-databases). CAS numbers are widely used in chemical literature and databases, and they are recognized as an international standard.
+Identifikatoren sind in der Regel eindeutige Codes, die dazu dienen, etwas im materiellen oder digitalen Raum zu identifizieren. So kann beispielsweise eine Forschungsgruppe eine feste Methode zur Benennung von Proben innerhalb ihrer Projekte haben. Ein weiteres Beispiel aus der Chemie ist die [Chemical Abstracts Service (CAS) Registry Number] (https://www.cas.org/solutions/cas-custom-services/cas-registry-services), eine eindeutige Kennung, die jedem chemischen Stoff zugewiesen wird, der in der [CAS-Datenbank] (https://www.cas.org/support/documentation/cas-databases) indexiert ist. CAS-Nummern werden in der chemischen Literatur und in Datenbanken weithin verwendet und sind als internationaler Standard anerkannt.
 
 
-In data management, identifiers can include [persistent identifiers (PIDs)](/docs/pid) such as digital object identifiers [DOIs](https://www.doi.org/) to persistently refer to published articles and research datasets or software in [repositories](/docs/repositories). [Electronic Lab Notebooks (ELNs)](/docs/eln) and [archiving](/docs/data_storage) systems typically also use an identifier system. Specific to chemistry, [InChI](/docs/inchi) codes serve as a machine-readable identifier for chemical substances.
+In der Datenverwaltung können Identifikatoren auch [persistente Identifikatoren (PIDs)](/docs/pid) wie digitale Objektidentifikatoren [DOIs](https://www.doi.org/) umfassen, um dauerhaft auf veröffentlichte Artikel und Forschungsdatensätze oder Software in [Repositories](/docs/repositories) zu verweisen. Auch [Electronic Lab Notebooks (ELNs)](/docs/eln) und [Archivierungssysteme](/docs/data_storage) verwenden in der Regel ein Kennzeichnungssystem. Speziell für die Chemie dienen [InChI](/docs/inchi)-Codes als maschinenlesbare Bezeichner für chemische Substanzen.
 
-In terms of the [FAIR data principles](docs/fair), identifiers should be machine-readable and help interlink related data. For example, referring to the DOI of the associated published journal article in a datasets metadata helps describe and lend context to the data. 
+Im Sinne der [FAIR data principles](docs/fair) sollten Identifikatoren maschinenlesbar sein und dazu beitragen, verwandte Daten miteinander zu verknüpfen. Beispielsweise hilft der Verweis auf den DOI des zugehörigen veröffentlichten Zeitschriftenartikels in den Metadaten eines Datensatzes, die Daten zu beschreiben und ihnen einen Kontext zu verleihen. 
 
-## Sources and further information
+## Quellen und weitere Informationen
 
-- [The InChI Code](https://doi.org/10.1021/acs.jchemed.8b00090)
-- German: [Forschungsdaten.info: Persistente Identifikatoren](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
+- [Der InChI-Code](https://doi.org/10.1021/acs.jchemed.8b00090)
+- Deutsch: [Forschungsdaten.info: Persistente Identifikatoren](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
