--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/10_pid.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/10_pid.mdx
@@ -7,53 +7,53 @@ slug: "/pid"
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-[Persistent identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets or persons and allow to reliably locate, identify, and verify the references.
+[Persistent Identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) sind eindeutige, dauerhafte Verweise auf identifizierte Quellen, wie z. B. Veröffentlichungen, Datensätze oder Personen, und ermöglichen das zuverlässige Auffinden, Identifizieren und Überprüfen der Referenzen.
 
-The two main PIDs employed within the chemistry community are Digital Object Identifiers ([DOIs](https://www.doi.org/)) as PIDs for objects such as publications, datasets, or software as well as [Open Research and Contributor iDs](https://doi.org/10.1087/20120404) ([ORCID iDs](https://orchid.org/)) for people. Additionally, the [Research Organization Registry](https://doi.org/10.6087/kcse.192) ([ROR](https://ror.org/)) is used to identify research institutions. Current development also includes Persistent Identification of Instruments ([PIDINST](https://doi.org/10.5334/dsj-2020-018)) as PIDs for the instrumentation used to obtain research data. The [Persistent Identifiers for eResearch (ePIC)](https://www.pidconsortium.net/) is specifically designated for digital research data storage.
+Die beiden wichtigsten PIDs, die in der Chemie verwendet werden, sind Digital Object Identifiers ([DOIs](https://www.doi.org/)) als PIDs für Objekte wie Veröffentlichungen, Datensätze oder Software sowie [Open Research and Contributor iDs](https://doi.org/10.1087/20120404) ([ORCID iDs](https://orchid.org/)) für Personen. Außerdem wird das [Research Organization Registry](https://doi.org/10.6087/kcse.192) ([ROR](https://ror.org/)) zur Identifizierung von Forschungseinrichtungen verwendet. Die aktuelle Entwicklung umfasst auch die persistente Identifizierung von Instrumenten ([PIDINST](https://doi.org/10.5334/dsj-2020-018)) als PIDs für die Instrumente, die zur Gewinnung von Forschungsdaten verwendet werden. Die [Persistent Identifiers for eResearch (ePIC)](https://www.pidconsortium.net/) sind speziell für die digitale Speicherung von Forschungsdaten vorgesehen.
 
-The main benefits of PIDs for chemistry researchers are increased findability, visibility, and ease of access of their scientific work. In the context of research data, PIDs are especially useful to interconnect publications and datasets in repositories.
+Die Hauptvorteile von PIDs für Chemieforscher sind eine bessere Auffindbarkeit, Sichtbarkeit und ein leichterer Zugang zu ihrer wissenschaftlichen Arbeit. Im Zusammenhang mit Forschungsdaten sind PIDs besonders nützlich, um Publikationen und Datensätze in Repositories miteinander zu verknüpfen.
 
 ## DOIs
 
 <img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="2" hspace="20" />
 
-Digital Object Identifiers are PIDs for objects such as publications and datasets, but also physical objects, which are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Most well-recognised DOI registration agencies include [CrossRef](https://www.crossref.org/) for publications and [DataCite](https://datacite.org/) focusing on [datasets](https://doi.org/10.1109/COINFO.2009.66).
+Digital Object Identifiers sind PIDs für Objekte wie Publikationen und Datensätze, aber auch physische Objekte, die von Mitgliedern der [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/) vergeben werden. Zu den bekanntesten DOI-Registrierungsstellen gehören [CrossRef](https://www.crossref.org/) für Publikationen und [DataCite](https://datacite.org/) mit Schwerpunkt auf [Datensätzen](https://doi.org/10.1109/COINFO.2009.66).
 
-A DOI consists of a character string divided into two parts by a slash. The prefix always starts with a `10.` and identifies the registrant, who retrieves a DOI from a DOI registration agency. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. DOIs are most frequently displayed as an URL such as `https://doi.org/10.1000/182` and include a resolver as HTTP proxy server to redirect to the linked object. DOIs are standardised by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html).
+Ein DOI besteht aus einer Zeichenkette, die durch einen Schrägstrich in zwei Teile geteilt wird. Der Präfix beginnt immer mit einer "10" und identifiziert den Registranten, der einen DOI von einer DOI-Registrierungsagentur abruft. Jeder Registrant hat sein eigenes eindeutiges Präfix. Das Suffix kennzeichnet ein bestimmtes Objekt, das von einem Registranten über eine Registrierungsagentur registriert wurde. DOIs werden am häufigsten als URL wie `https://doi.org/10.1000/182` angezeigt und enthalten einen Resolver als HTTP-Proxy-Server, der zum verlinkten Objekt weiterleitet. DOIs werden von der [Internationalen Organisation für Normung](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html) standardisiert.
 
 <p align="center"><img align="center" src={useBaseUrl("/img/topics/crossref-logo-landscape-200.svg")} width="200" alt="Crossref logo" />
 <img align="center" src={useBaseUrl("/img/topics/datacite.svg")} class="align-center" width="200" alt="DataCite logo" /></p>
 
-Registrants are [liable](https://support.datacite.org/docs/doi-registration-policy) to update the URL connected to the DOI if the object is moved, which is enabled by metadata attached to the DOI during registration.
+Registrierende sind [haftbar](https://support.datacite.org/docs/doi-registration-policy), die mit der DOI verbundene URL zu aktualisieren, wenn das Objekt verschoben wird, was durch die der DOI bei der Registrierung beigefügten Metadaten ermöglicht wird.
 
 ## ORCID iDs
 
 <img align="left" src={useBaseUrl("/img/topics/ORCIDiD_iconvector.svg")} width="80" alt="ORCiD logo" vspace="12" hspace="20" />
 
-[ORCID iDs](https://orchid.org/) are open and non-proprietary PIDs for authors also described as unique author identifiers and can be retrieved and used by any author free of charge. They are provided by the non-profit organization ORCID Inc., formerly called Open Research and Contributors ID organisation, and sustained by fees of member organisations, providing extended application program interfaces (API) for their members to integrate ORCID services.
+[ORCID iDs](https://orchid.org/) sind offene und nicht-proprietäre PIDs für Autoren, die auch als eindeutige Autorenkennungen bezeichnet werden und von jedem Autor kostenlos abgerufen und genutzt werden können. Sie werden von der Non-Profit-Organisation ORCID Inc. zur Verfügung gestellt, die früher Open Research and Contributors ID Organisation hieß und sich aus den Gebühren der Mitgliedsorganisationen finanziert, die ihren Mitgliedern erweiterte Anwendungsprogrammschnittstellen (API) zur Integration von ORCID-Diensten zur Verfügung stellen.
 
-An ORCID iD is a [16-digit alphanumerical code](https://support.orcid.org/hc/en-us/articles/360006897674-Structure-of-the-ORCID-Identifier) to unambiguously identify authors, whille author names might not be unique, may change, or may have different ordering conventions depending on cultural differences. ORCID iDs can be depicted as an URL, e.g. `https://orcid.org/0000-0000-0000-0000` but are also typically depicted without the resolver as an URN, e.g. `ORCID:0000-0000-0000-0000`. ORCID iDs are a subset of International Standards Name Identifiers (ISNI) provided by the [International Organisation for Standardisation](https://www.iso.org/) (ISO) as [ISO 27729](https://www.iso.org/standard/44292.html).
+Eine ORCID iD ist ein [16-stelliger alphanumerischer Code] (https://support.orcid.org/hc/en-us/articles/360006897674-Structure-of-the-ORCID-Identifier) zur eindeutigen Identifizierung von Autoren, während Autorennamen nicht immer eindeutig sind, sich ändern können oder je nach kulturellen Unterschieden unterschiedliche Ordnungskonventionen haben. ORCID iDs können als URL dargestellt werden, z.B. `https://orcid.org/0000-0000-0000-0000`, werden aber auch typischerweise ohne den Resolver als URN dargestellt, z.B. `ORCID:0000-0000-0000-0000`. ORCID iDs sind eine Untergruppe der International Standard Name Identifiers (ISNI), die von der [Internationalen Organisation für Normung](https://www.iso.org/) (ISO) als [ISO 27729](https://www.iso.org/standard/44292.html) bereitgestellt werden.
 
-The [ORCID record](https://doi.org/10.1038/462825a) connected to ORCID iDs includes the bibliographic output and may also provide information on employment, education and qualification, invited positions and distinctions, memberships as well as service and funding, depending on the privacy setting made by the author.
+Der mit ORCID iDs verbundene [ORCID-Datensatz](https://doi.org/10.1038/462825a) umfasst die bibliografische Ausgabe und kann auch Informationen über Beschäftigung, Ausbildung und Qualifikation, eingeladene Positionen und Auszeichnungen, Mitgliedschaften sowie Dienstleistungen und Finanzierung enthalten, je nachdem, welche Datenschutzeinstellungen der Autor vorgenommen hat.
 
-In addition to ORCID iDs as non-proprietary PIDs for authors, there are also proprietary author identifiers such as Thomson Reuters’ [Web of Science ResearcherID](https://www.researcherid.com/#rid-for-researchers) and Elsevier’s [Scopus Author ID](https://www.scopus.com/freelookup/form/author.uri).
+Neben den ORCID iDs als nicht-proprietäre PIDs für Autoren gibt es auch proprietäre Autorenidentifikatoren wie die [Web of Science ResearcherID] von Thomson Reuters (https://www.researcherid.com/#rid-for-researchers) und die [Scopus Author ID] von Elsevier (https://www.scopus.com/freelookup/form/author.uri).
 
 ## ePICs
-<!--![ePIC Header](../../static/img/topics/EPIC-header_transparent.png)-->
+<!--![ePIC-Header](../../static/img/topics/EPIC-header_transparent.png)-->
 
 <img align="left" src={useBaseUrl("/img/topics/ePIC-head.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
 
-The Persistent Identifier for eResearch ([ePICs](https://www.pidconsortium.net/)), like the DOI, are based on the [Handle.Net Registry (HNR)](https://www.handle.net/) system yet they are intended to be used for unpublished digital research objects, while [DOIs](#dois) are intended for published objects. To this end, ePICs may be assigned even at early stages of research to locate research data and may be used by various research data management or archiving systems. Upon publication of a dataset, the full research data can be linked via the ePIC, for example, in cases that include proprietary or sensitive information. 
+Der Persistent Identifier for eResearch ([ePICs](https://www.pidconsortium.net/)) basiert wie der DOI auf dem [Handle.Net Registry (HNR)](https://www.handle.net/) System, ist aber für unveröffentlichte digitale Forschungsobjekte gedacht, während [DOIs](#dois) für veröffentlichte Objekte gedacht sind. Zu diesem Zweck können ePICs bereits in frühen Phasen der Forschung vergeben werden, um Forschungsdaten zu lokalisieren, und sie können von verschiedenen Systemen zur Verwaltung oder Archivierung von Forschungsdaten verwendet werden. Nach der Veröffentlichung eines Datensatzes können die vollständigen Forschungsdaten über die ePIC verlinkt werden, z. B. in Fällen, die geschützte oder sensible Informationen enthalten. 
 
-This type of PID will commonly lead to a landing page, the content of which is maintained by the PID owner. Examples here include the dataset's metadata or a method of contacting those responsible for the dataset.
+Diese Art von PID führt in der Regel zu einer Landing Page, deren Inhalt vom PID-Inhaber gepflegt wird. Beispiele hierfür sind die Metadaten des Datensatzes oder eine Kontaktmöglichkeit zu den Verantwortlichen des Datensatzes.
 
-## Sources and further information
+## Quellen und weitere Informationen
 
-- English: [DOI Basics - DataCite](https://support.datacite.org/docs/doi-basics)
-- German: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
-- German: [Digital Object Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
-- German: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
-- English: [ePIC FAQs - PID Consortium](https://www.pidconsortium.net/?page_id=1060)
+- Englisch: [DOI-Grundlagen - DataCite](https://support.datacite.org/docs/doi-basics)
+- Deutsch: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
+- Deutsch: [Digitale Objektbezeichner - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
+- Deutsch: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
+- Englisch: [ePIC FAQs - PID Konsortium](https://www.pidconsortium.net/?page_id=1060)
 
 ----
-Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
+Hauptautor: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
