--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
@@ -4,10 +4,10 @@ slug: "/data_description_annotation"
 id: "data_description_annotation"
 ---
 
-# Data Description & Annotation
+# Beschreibung und Kommentierung von Daten
 
-To best understand a dataset at hand, whether it be for yourself, your working group, or others in the scientific community, it must be clearly described. To this end, data annotation and data description are both important aspects of data management and analysis. 
+Um einen Datensatz am besten zu verstehen, sei es für Sie selbst, Ihre Arbeitsgruppe oder andere in der wissenschaftlichen Gemeinschaft, muss er klar beschrieben werden. Zu diesem Zweck sind die Datenkommentierung und die Datenbeschreibung wichtige Aspekte der Datenverwaltung und -analyse. 
 
-Data description involves providing a detailed overview of the data, including its characteristics, format, structure, and any relevant context. Research data annotation is the process of adding labels or notes to data to make it more easily understandable and accessible for analysis. In using rich machine-readable [metadata](docs/metadata), data annotation and description allows both humans and machines to make informed decisions about the suitability of the data for their research and ensure that the data is properly attributed and cited.
+Bei der Datenbeschreibung geht es darum, einen detaillierten Überblick über die Daten zu geben, einschließlich ihrer Merkmale, ihres Formats, ihrer Struktur und aller relevanten Zusammenhänge. Bei der Annotation von Forschungsdaten werden den Daten Beschriftungen oder Notizen hinzugefügt, um sie für die Analyse leichter verständlich und zugänglich zu machen. Durch die Verwendung umfangreicher maschinenlesbarer [Metadaten] (docs/metadata) können sowohl Menschen als auch Maschinen fundierte Entscheidungen über die Eignung der Daten für ihre Forschung treffen und sicherstellen, dass die Daten korrekt zugeordnet und zitiert werden.
 
-Furthermore, metadata used for either data description or annotation can be semantically described, employing controlled vocabularies, or better yet, [ontologies](/docs/ontology) to reduce ambiguity, making them machine-readable and machine-*understandable*. This facilitates searching and also finding datasets for machines and humans alike.
+Darüber hinaus können Metadaten, die für die Datenbeschreibung oder -anmerkung verwendet werden, semantisch beschrieben werden, indem kontrollierte Vokabulare oder besser noch [Ontologien](/docs/ontology) verwendet werden, um Mehrdeutigkeit zu reduzieren und sie maschinenlesbar und maschinenverstehbar* zu machen. Dies erleichtert die Suche und das Auffinden von Datensätzen für Maschinen und Menschen gleichermaßen.
